wechat/content/2015-07-10-java-operate

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    
         <p><strong>a += b</strong>和<strong>a = a + b</strong>完全等价么(java)？可能很多人以为是一样的，其实并非等价的，下面看一下证据吧。</p>

<pre><code>public class Test {
    public static void main(String[] args) {
        int a = 0;
        float c = 2.0f;
        a += c;
        a = a +  c;  //①
    }
}
</code></pre>

<p>上面的代码有问题么？ 能够通过编译么？ 答案是<strong>否定的</strong>。</p>

<pre><code>$ javac Test.java
Test.java:6: error: possible loss of precision
         a = a +  c;
               ^
  required: int
  found:    float
1 error
</code></pre>

<p>出现的问题是编译错误， 但是<strong>a += c</strong>却不会出现编译错误，能够正常通过编译。</p>

<p><strong>为什么为这样呢？</strong></p>

<p>我们将<strong>①</strong>处代码去除后，顺利编译，可以使用jd-gui等工具看一下<strong>a += c</strong>的反编译后的代码：</p>

<pre><code>public class Test
{
  public static void main(String[] paramArrayOfString)
  {
    int i = 0;
    float f = 2.0F;
    i = (int)(i + f);
  }
}
</code></pre>

<p>看一下以下这句:</p>

<pre><code> i = (int)(i + f);
</code></pre>

<p>可以看出<strong>a += c</strong>在编译的时候做了强制类型转换。</p>

<pre><code>结论: 
对于 a += c
如果a的类型可以兼容b，则 (a += c) 等价于 (a = a + c) 
否则，则会在a与c做完加法后进行强制转换。
</code></pre>

<blockquote>
  <p>如有任何知识产权、版权问题或理论错误，还请指正。</p>

  <p>转载请注明原作者及以上信息。</p>
</blockquote>

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

    

